Colaboratory를 통해 생성됨

--- a/wanted_pre_onboarding/wanted_pre_onboarding.ipynb
+++ b/wanted_pre_onboarding/wanted_pre_onboarding.ipynb
@@ -6,7 +6,7 @@
       "name": "wanted_pre_onboarding.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNts+cR2Qd8p+OaL//ne1iw",
+      "authorship_tag": "ABX9TyOjv28bd80AF0jIwU6Tq0xL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,17 +54,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import re"
-      ],
-      "metadata": {
-        "id": "dRcJkEGKkHyx"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### **문제 1) Tokenizer 생성하기**\n",
@@ -104,7 +93,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "# 필요 라이브러리 import\n",
+        "import re"
+      ],
+      "metadata": {
+        "id": "dRcJkEGKkHyx"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "w0G5HDWZg7LO"
       },
@@ -163,11 +164,15 @@
         "            '''\n",
         "            문제 1-3.\n",
         "            '''\n",
+        "            # 위에서 만들었던 word_dict를 활용하여\n",
+        "            # 문자를 정수로 바꿔주는 정수 인덱싱 진행\n",
         "            for word in tokens:\n",
         "                word2idx = []\n",
         "                for i in word:\n",
+        "                    # 해당 토큰이 word_dict에 있는 경우 매치가 되는 정수로 변환\n",
         "                    if i in self.word_dict:\n",
         "                        word2idx.append(self.word_dict[i])\n",
+        "                    # 만약 매치되는 것이 없다면 'oov'에 해당하는 정수로 변환\n",
         "                    else :\n",
         "                        word2idx.append(self.word_dict['oov'])\n",
         "                result.append(word2idx)\n",
@@ -179,6 +184,114 @@
         "        self.fit(sequences)\n",
         "        result = self.transform(sequences)\n",
         "        return result"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 문제 1 결과 확인해보기"
+      ],
+      "metadata": {
+        "id": "SL86oeV7J0-E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sen = [\n",
+        "  'I want to eat an APPLE!',\n",
+        "  'I WANT to eat a banana',\n",
+        "  'Long YELLOW BANANA banana!',\n",
+        "  'I LOVE fruit!!!'\n",
+        "] "
+      ],
+      "metadata": {
+        "id": "HruLyw_jJys-"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tok = Tokenizer()"
+      ],
+      "metadata": {
+        "id": "69SR2fgiJ6s7"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = tok.preprocessing(sen)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g_KdnWVQKFjk",
+        "outputId": "d092815f-c20a-498d-f7bd-6ee2f581ed20"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['i', 'want', 'to', 'eat', 'an', 'apple'], ['i', 'want', 'to', 'eat', 'a', 'banana'], ['long', 'yellow', 'banana', 'banana'], ['i', 'love', 'fruit']]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tok.fit(sen)\n",
+        "print(tok.word_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NDf2LGctKWeT",
+        "outputId": "bd12f899-3cc3-437a-d1f7-2f40e534538d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'oov': 0, 'i': 1, 'want': 2, 'to': 3, 'eat': 4, 'an': 5, 'apple': 6, 'a': 7, 'banana': 8, 'long': 9, 'yellow': 10, 'love': 11, 'fruit': 12}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = tok.fit_transform(sen)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3MQhdT5IMl-1",
+        "outputId": "e5c6b4d2-84f3-414d-d86d-7085dc39314a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3, 4, 5, 6], [1, 2, 3, 4, 7, 8], [9, 10, 8, 8], [1, 11, 12]]\n"
+          ]
+        }
       ]
     },
     {
@@ -239,7 +352,7 @@
       "metadata": {
         "id": "ZAWJWktEf9Ye"
       },
-      "execution_count": 134,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -249,28 +362,41 @@
         "    def __init__(self, tokenizer):\n",
         "        self.tokenizer = tokenizer\n",
         "        self.fit_checker = False\n",
-        "        self.idf_matrix = []\n",
-        "        self.tfidf_matrix = []\n",
-        "        self.tf_matrix = []\n",
+        "        # 입력된 문장으로만 tf-idf 행렬을 만들기 위해\n",
+        "        # 입력된 문장을 위한 vocab 변수입니다.\n",
         "        self.tfidf_vocab = []\n",
+        "        # fit에서 만들 idf_matrix를 저장하기 위한 변수입니다.\n",
+        "        self.idf_matrix = []\n",
+        "        # transform에서 tf-idf행렬을 만들기 위해 사용할 tf_matrix 변수입니다.\n",
+        "        self.tf_matrix = []\n",
+        "        # transform에서 만들어 tf-idf 행렬을 저장하기 위한 변수입니다.\n",
+        "        self.tfidf_matrix = []\n",
         "\n",
         "    def fit(self, sequences):\n",
         "        tokenized = self.tokenizer.fit_transform(sequences)\n",
         "        '''\n",
         "        문제 2-1.\n",
         "        '''\n",
+        "        # idf행렬을 만들기 위해서 입력된 문장 d의 갯수를 len을 활용하여 구합니다.\n",
         "        n = len(tokenized)\n",
+        "\n",
+        "        # 현재 문장에 사용된 토큰만으로 tf-idf행렬을 만들기 위해\n",
+        "        # tfidf_vocab변수를 만들어 따로 사전을 만들어줍니다.\n",
         "        for i in tokenized:\n",
         "            self.tfidf_vocab += i\n",
-        "            \n",
+        "\n",
         "        self.tfidf_vocab = list(set(self.tfidf_vocab))\n",
         "        self.tfidf_vocab.sort()\n",
         "\n",
+        "        # idf행렬을 만들기위해서 만들어 두었던 tfidf_vacab에서\n",
+        "        # 단어 하나씩을 가져와 해당 단어가 포함된 문장의 갯수를 파악하여\n",
+        "        # df를 계산하고, 이를 활용하여 idf행렬을 만듭니다.\n",
         "        for i in self.tfidf_vocab:\n",
         "            df = 0\n",
         "            for sen in tokenized:\n",
         "                df += i in sen\n",
         "            self.idf_matrix.append(log(n/(df+1)))\n",
+        "            #만들어진 idf 행렬은 tf_idf행렬을 구할 때 사용합니다.\n",
         "\n",
         "        self.fit_checker = True\n",
         "\n",
@@ -281,15 +407,24 @@
         "            '''\n",
         "            문제 2-2.\n",
         "            '''\n",
+        "            # 문장과 target단어가 들어왔을 때\n",
+        "            # 해당 문장에 target단어가 몇개 포함되었는지\n",
+        "            # 확인하기 위한 _tf함수를 만들어줍니다.\n",
         "            def _tf(d,t):\n",
         "                return d.count(t)\n",
         "\n",
+        "            # 만들어 두었던 _tf함수를 활용하여\n",
+        "            # 반복문들 통해 문장을 하나씩 가져와\n",
+        "            # tfidf_vocab에서 target단어를 가져오고\n",
+        "            # 해당 target단어의 출현 횟수를 list로 만들어 tf_matrix변수에 저장합니다.\n",
         "            for sen in tokenized:\n",
         "                tmp = []\n",
         "                for i in self.tfidf_vocab:\n",
         "                    tmp.append(_tf(sen,i))\n",
         "                self.tf_matrix.append(tmp)\n",
         "           \n",
+        "           # 저장한 tf_matrix변수를 활용하여\n",
+        "           # 해당 토큰의 idf값에 tf값을 곱하여 tf-idf행렬을 만들어냅니다.\n",
         "            for i in range(len(self.tf_matrix)):\n",
         "                tmp=[]\n",
         "                for j in range(len(self.tf_matrix[i])):\n",
@@ -308,61 +443,42 @@
       "metadata": {
         "id": "1mm2OVuiRk69"
       },
-      "execution_count": 133,
+      "execution_count": 9,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "chk = [[1, 2, 3, 2, 3, 4], [1, 5, 6]]\n",
-        "num = 0\n",
-        "t = 1\n",
-        "for i in chk:\n",
-        "    num += t in i"
+        "사이킷런이라는 외부 라이브러리를 통해서도 tf-idf 행렬을 만들 수 있습니다.  \n",
+        "이를 활용하여 list형태로 output의 형식을 맞추어 사용할 수 있지만, 해당 라이브러리를 활용하는 것보다 직접 만들어보는 것이 좀 더 의미있을 것이라고 판단하여 직접 제작하여 사용하였습니다."
       ],
       "metadata": {
-        "id": "7Xa41XK9Qbg9"
-      },
-      "execution_count": 36,
-      "outputs": []
+        "id": "NB3pLP-TRIXt"
+      }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(num)"
+        "### 문제 2 결과 확인해보기"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NkgKW6q1QlWF",
-        "outputId": "e5f71b0f-63f3-4c72-fb88-f9346361626f"
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
-      ]
+        "id": "Zr3scSZoM2Qw"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "sen = [\n",
-        "  '먹고 싶은 사과',\n",
-        "  '먹고 싶은 바나나',\n",
-        "  '길고 노란 바나나 바나나',\n",
-        "  '저는 과일이 좋아요'\n",
+        "  'I want to eat an APPLE!',\n",
+        "  'I WANT to eat a banana',\n",
+        "  'Long YELLOW BANANA banana!',\n",
+        "  'I LOVE fruit!!!'\n",
         "] "
       ],
       "metadata": {
         "id": "MHaK5I2GpdQ4"
       },
-      "execution_count": 135,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -373,44 +489,7 @@
       "metadata": {
         "id": "nECUr3Trpffu"
       },
-      "execution_count": 136,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tok.fit_transform(sen)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KVhnvvK4pmkg",
-        "outputId": "6ceea239-5b48-4ef9-e547-760e061d75da"
-      },
-      "execution_count": 138,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[1, 2, 3], [1, 2, 4], [5, 6, 4, 4], [7, 8, 9]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 138
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tokenized = tok.transform(sen)"
-      ],
-      "metadata": {
-        "id": "hBsLt8Gv5JdB"
-      },
-      "execution_count": 139,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -419,21 +498,34 @@
         "tfidf = TfidfVectorizer(tok)"
       ],
       "metadata": {
-        "id": "i9O9MG6ygqVH"
+        "id": "KVhnvvK4pmkg"
       },
-      "execution_count": 140,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "result = tfidf.fit_transform(sen)"
+        "result = tfidf.fit_transform(sen)\n",
+        "print(result)"
       ],
       "metadata": {
-        "id": "gC60uIwscH2G"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gC60uIwscH2G",
+        "outputId": "88eba907-3a58-4f73-834f-50967566a7cd"
       },
-      "execution_count": 141,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.0, 0.28768207245178085, 0.28768207245178085, 0.28768207245178085, 0.6931471805599453, 0.6931471805599453, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], [0.0, 0.28768207245178085, 0.28768207245178085, 0.28768207245178085, 0.0, 0.0, 0.6931471805599453, 0.28768207245178085, 0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5753641449035617, 0.6931471805599453, 0.6931471805599453, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.6931471805599453, 0.6931471805599453]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -445,16 +537,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ToIsIRAtoyHJ",
-        "outputId": "e2ed98ea-c10a-4369-ba98-5319d143bcd9"
+        "outputId": "1f54a810-961a-45c1-c3e2-0a369a08ece1"
       },
-      "execution_count": 142,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[0.28768207245178085,\n",
+              "[[0.0,\n",
               "  0.28768207245178085,\n",
+              "  0.28768207245178085,\n",
+              "  0.28768207245178085,\n",
+              "  0.6931471805599453,\n",
               "  0.6931471805599453,\n",
               "  0.0,\n",
               "  0.0,\n",
@@ -462,23 +557,29 @@
               "  0.0,\n",
               "  0.0,\n",
               "  0.0],\n",
-              " [0.28768207245178085,\n",
+              " [0.0,\n",
+              "  0.28768207245178085,\n",
+              "  0.28768207245178085,\n",
               "  0.28768207245178085,\n",
               "  0.0,\n",
-              "  0.28768207245178085,\n",
               "  0.0,\n",
+              "  0.6931471805599453,\n",
+              "  0.28768207245178085,\n",
               "  0.0,\n",
               "  0.0,\n",
               "  0.0,\n",
               "  0.0],\n",
               " [0.0,\n",
+              "  0.0,\n",
+              "  0.0,\n",
+              "  0.0,\n",
+              "  0.0,\n",
               "  0.0,\n",
               "  0.0,\n",
               "  0.5753641449035617,\n",
               "  0.6931471805599453,\n",
               "  0.6931471805599453,\n",
               "  0.0,\n",
-              "  0.0,\n",
               "  0.0],\n",
               " [0.0,\n",
               "  0.0,\n",
@@ -486,13 +587,42 @@
               "  0.0,\n",
               "  0.0,\n",
               "  0.0,\n",
-              "  0.6931471805599453,\n",
+              "  0.0,\n",
+              "  0.0,\n",
+              "  0.0,\n",
+              "  0.0,\n",
               "  0.6931471805599453,\n",
               "  0.6931471805599453]]"
             ]
           },
           "metadata": {},
-          "execution_count": 142
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tfidf.tfidf_vocab"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ND7WqyRdSA01",
+        "outputId": "7ef00218-e3a0-4ce0-ddad-409897599545"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
